# University

./: .gitmodules
Semester-5/C++/608/: 608.cpp  608.sln  608.vcxproj  header.h  source.cpp  tests.txt
Semester-5/C++/608_2/: 608_2.sln  608_2.vcxproj  header.h  input.txt  main.cpp  output.txt  source.cpp
Semester-5/C++/7_1/: 7_1.cpp  7_1.sln  7_1.vcxproj  header.h  input.txt  source.cpp
Semester-5/C++/bisection/: bisection.cpp  bisection.sln  bisection.vcxproj
Semester-5/C++/chess/: Chess.cpp  Chess.h  Console.h  bishop_tests.txt  chess.sln  chess.vcxproj  en_passant.txt  knight_test.txt  main.cpp  mate.txt  output.txt  pawn_tests.txt  queen_test.txt  rook_test.txt  scholars_mate.txt  stupid_tests.txt
Semester-5/C++/complex/: complex.cpp  complex.sln  complex.vcxproj
Semester-5/C++/index/: index.sln  index.txt  index.vcxproj  input.txt  main.cpp  origin.txt
Semester-5/C++/ordered_arr/: ordered_arr.cpp  ordered_arr.sln  ordered_arr.vcxproj
Semester-5/C++/read_number/: read_number.c  (+2 more)
Semester-5/R/: class_graphics.R  homework_1.R  homework_2.R  homework_3.R
Semester-6/Simulation_of_distributions/: Fibonacci_Jump_Ahead.ipynb  LCG_crack.ipynb  MultivaruateNormal.ipynb  Polygon_equidistribution.ipynb
Semester-6/Simulation_of_distributions/permutation/: BinSampleGenerator.cpp  BinSampleGenerator.h  CMakeLists.txt  Chi2.cpp  Chi2.h  CyclesNumberSample.cpp  CyclesNumberSample.h  Distribution.cpp  Distribution.h  Permutation.cpp  Permutation.h  PseudoPoissonDistribution.cpp  PseudoPoissonDistribution.h  SingletonGenerator.cpp  SingletonGenerator.h  main.cpp
(+34 files in other folders)
